--- a/src/pages/Remotes/index.module.scss
+++ b/src/pages/Remotes/index.module.scss
@@ -1,8 +1,9 @@
 .cardCover {
   padding: 10px;
   img {
-    width: 100%;
+    width: 80%;
     display: block;
+    margin: 0 auto;
   }
 }
 .cardMeta {
