--- a/src/pages/Main/components/Header/index.module.scss
+++ b/src/pages/Main/components/Header/index.module.scss
@@ -1,9 +1,10 @@
 .Header {
   width: 100%;
-  height: 48px;
+  height: 60px;
   padding: 0 16px;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   display: flex;
+  background-color: #000;
 }
 
 .Header_EmptySeat {
