--- a/src/pages/Main/index.module.scss
+++ b/src/pages/Main/index.module.scss
@@ -5,12 +5,34 @@
   }
 }
 
+.Content {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .Header_RightChild {
   padding: 0 5px;
 
   &:last-child {
     padding-right: 0;
   }
+}
+
+.Button_Import {
+  background-color: #eee;
+  border-color: #eee;
+  color: #666;
+
+  &:hover,
+  &:focus {
+    background-color: #fefefe;
+    color: #666;
+    border-color: #eee;
+  }
+}
+
+.Project_List {
+  margin-top: 20px;
 }
 
 .cardMeta {
@@ -28,12 +50,5 @@
     width: 80%;
     display: block;
     margin: 0 auto;
-  }
-}
-.cardMeta {
-  display: flex;
-  align-items: center;
-  span {
-    flex: 1;
   }
 }
