--- a/src/components/CreateProject/index.module.scss
+++ b/src/components/CreateProject/index.module.scss
@@ -6,3 +6,11 @@
     background-color: #eee;
   }
 }
+
+.form {
+  position: sticky;
+  top: 0px;
+  padding-top: 20px !important;
+  background-color: #fff;
+  z-index: 1;
+}
