--- a/src/pages/Project/index.module.scss
+++ b/src/pages/Project/index.module.scss
@@ -7,11 +7,11 @@
   .projectPathTooltip {
     visibility: hidden;
     width: max-content;
-    background-color: #000;
+    background-color: #666;
     color: #fff;
     text-align: center;
     border-radius: 10px;
-    padding: 2px;
+    padding: 0 8px;
     font-size: 14px;
     
     /* 定位 */
