--- a/src/components/CreateProject/index.module.scss
+++ b/src/components/CreateProject/index.module.scss
@@ -7,10 +7,21 @@
   }
 }
 
-.form {
-  position: sticky;
-  top: 0px;
-  padding-top: 20px !important;
-  background-color: #fff;
-  z-index: 1;
+// .form {
+//   position: sticky;
+//   top: 0px;
+//   padding-top: 20px !important;
+//   background-color: #fff;
+//   z-index: 1;
+// }
+
+.dirList {
+  flex: 1;
+  overflow: auto;
+}
+
+.drawContent {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
