--- a/src/components/CreateProject/index.module.scss
+++ b/src/components/CreateProject/index.module.scss
@@ -8,11 +8,11 @@
 }
 
 .form {
-  position: sticky;
-  top: 0px;
+  // position: sticky;
+  // top: 0px;
   padding-top: 20px !important;
-  background-color: #fff;
-  z-index: 1;
+  // background-color: #fff;
+  // z-index: 1;
 }
 
 .dirList {
@@ -20,8 +20,8 @@
   overflow: auto;
 }
 
-// .drawContent {
-//   display: flex;
-//   flex-direction: column;
-//   height: 100%;
-// }
+.drawContent {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
