--- a/src/pages/Main/index.module.scss
+++ b/src/pages/Main/index.module.scss
@@ -1,7 +1,9 @@
-
 .createProjectBox {
   position: relative;
   padding: 0 24px 24px;
   background-color: #fff;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
